// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack style params direction column 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-15oshl4-QxStack-root"
    data-testid="testStyleParams-direction-column"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params direction row 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_row QxStack_alignItems_center QxStack_spacing_8px css-w07smh-QxStack-root"
    data-testid="testStyleParams-direction-row"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params inline false 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-15oshl4-QxStack-root"
    data-testid="testStyleParams-inline-false"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params inline true 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_inline QxStack_spacing_8px css-5upseb-QxStack-root"
    data-testid="testStyleParams-inline-true"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params order default 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-15oshl4-QxStack-root"
    data-testid="testStyleParams-order-default"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params order reverse 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_reverse QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-t8esz-QxStack-root"
    data-testid="testStyleParams-order-reverse"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 2em 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_2em css-tjqsw4-QxStack-root"
    data-testid="testStyleParams-spacing-2em"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 8px 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_8px css-15oshl4-QxStack-root"
    data-testid="testStyleParams-spacing-8px"
  >
    12
  </div>
</DocumentFragment>
`;

exports[`Stack style params spacing 16px 1`] = `
<DocumentFragment>
  <div
    class="QxStack QxStack_order_default QxStack_direction_column QxStack_alignItems_stretch QxStack_spacing_16px css-1mjrrn3-QxStack-root"
    data-testid="testStyleParams-spacing-16px"
  >
    12
  </div>
</DocumentFragment>
`;
